--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="contact-form-section">
-        <form action="https://formsubmit.co/squadsquid99@gmail.com" method="POST">
+        <form action="https://formsubmit.co/87bb132650a70f710d81ec0b9177f3f8" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
