--- a/about.html
+++ b/about.html
@@ -3,44 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Mentors</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="nav">
         <div class="logo">
-            <a href="#" style="color: #FFD700; text-decoration: none; font-weight: bold;">Placeholder Logo</a>
+            <a href="#" style="color: #FFD700; text-decoration: none; font-weight: bold;">
+                <img src="beanstalk.png" alt="Beanstalk Logo" class="logo-img">
+                Beanstalk Prep
+            </a>
         </div>
         <div class="menu">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="about.html">Mentors</a>
             <a href="contact.html">Contact Us</a>
+            <a href="college.html">Info</a>
         </div>
     </div>
-div>
-
 
     <div class="about-hero">
-        <h1>About Us</h1>
+        <h1 class="animate-fade-slide">Our Mentors</h1>
     </div>
 
     <div class="team-section">
-        <div class="team-member">
+        <div class="team-member animate-slide-in-left">
             <img src="person.jpg" alt="Person 1">
             <h3>Person 1</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis</p>
         </div>
-        <div class="team-member">
+        <div class="team-member animate-slide-in-left">
             <img src="person2.jpg" alt="Person 2">
             <h3>Person 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis</p>
+        </div>
+        <div class="team-member animate-slide-in-left">
+            <img src="person3.jpg" alt="Person 3">
+            <h3>Person 3</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis</p>
         </div>
     </div>
 
     <div class="footer">
         <div class="footer-content">
-            <div class="footer-section company-info">
+            <div class="footer-section company-info animate-fade-in">
                 <h3>Placeholder title</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                 <p><strong>Phone:</strong> 1234567890</p>
@@ -50,28 +57,27 @@ div>
                     <a href="#" class="footer-btn">Subscribe</a>
                 </div>
             </div>
-            <div class="footer-section services">
+            <div class="footer-section services animate-fade-in">
                 <h3>K - 8</h3>
                 <p>ISEE<br>SSAT<br>Tutoring</p>
             </div>
-            <div class="footer-section services">
+            <div class="footer-section services animate-fade-in">
                 <h3>9 - 12</h3>
                 <p>SAT<br>ACT<br>AP Exams<br>Tutoring<br>College Admissions<br>Summer Program<br>Equity Program</p>
             </div>
-            <div class="footer-section services">
+            <div class="footer-section services animate-fade-in">
                 <h3>College</h3>
                 <p>Tutoring</p>
                 <h3>Graduate</h3>
                 <p>GRE<br>GMAT<br>LSAT</p>
             </div>
-            <div class="footer-section about">
+            <div class="footer-section about animate-fade-in">
                 <h3>About</h3>
                 <p>Placeholder<br>Placeholder<br>Placeholder<br>Placeholder</p>
             </div>
         </div>
         <p class="footer-copyright">© 2020 Placeholder, Inc. All rights reserved. <a href="#">Privacy Policy</a> <a href="#">Terms of Use</a></p>
     </div>
-
 
     <script src="script.js"></script>
 </body>
