--- a/college.html
+++ b/college.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>College Logos</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -22,36 +22,30 @@
             <a href="college.html">Info</a>
         </div>
     </div>
-    <div class="contact-hero">
-        <h1>Contact Us</h1>
+
+    <div class="college-hero">
+        <h1 class="animate-fade-slide">More Info</h1>
     </div>
 
-    <div class="manual">
-        <p>If you prefer, you can email us directly at <a href="mailto:example@example.com">example@example.com</a>.</p>
+    <div class="logos-section">
+        <div class="logo-box">
+            <img src="education.png" alt="College 1 Logo">
+            <h3>Placeholder 1</h3>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="logo-box">
+            <img src="education2.png" alt="College 2 Logo">
+            <h3>College 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="logo-box">
+            <img src="education3.png" alt="College 3 Logo">
+            <h3>College 3</h3>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
     </div>
 
-    <div class="contact-form-section">
-       
-        <form action="https://formsubmit.co/87bb132650a70f710d81ec0b9177f3f8" method="POST">
-            <!-- Redirect to the success page after submission -->
-            <input type="hidden" name="_next" value="success.html">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="description">Description:</label>
-            <textarea id="description" name="description"></textarea>
-
-            <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone">
-
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-
-    <div class="footer">
+<div class="footer">
         <div class="footer-content">
             <div class="footer-section company-info">
                 <h3>Placeholder title</h3>
@@ -84,5 +78,7 @@
         </div>
         <p class="footer-copyright">© 2020 Placeholder, Inc. All rights reserved. <a href="#">Privacy Policy</a> <a href="#">Terms of Use</a></p>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
