--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Placeholder</title>
+    <title>Beanstalk Prep</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="nav">
         <div class="logo">
-            <a href="#" style="color: #FFD700; text-decoration: none; font-weight: bold;">Placeholder Logo</a>
+            <a href="#" style="color: #FFD700; text-decoration: none; font-weight: bold;">
+                <img src="beanstalk.png" alt="Beanstalk Logo" class="logo-img">
+                Beanstalk Prep
+            </a>
         </div>
         <div class="menu">
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="about.html">Mentors</a>
             <a href="contact.html">Contact Us</a>
+            <a href="college.html">Info</a>
         </div>
     </div>
 
-    
     <div class="hero">
         <div class="overlay"></div>
         <div class="hero-content">
@@ -31,8 +34,8 @@
 
     <div class="info-section" id="info-section">
         <div class="info-block" id="block1">
-            <div class="info-title">
-                <h2>Placeholder Title 1<br>Subtitle</h2> <!-- Split title into two lines -->
+            <div class="info-image">
+                <img src="college.jpg" alt="Placeholder Title 1">
             </div>
             <div class="info-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -42,8 +45,8 @@
             <div class="info-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <div class="info-title">
-                <h2>Placeholder Title 2<br>Subtitle</h2> <!-- Split title into two lines -->
+            <div class="info-image">
+                <img src="college2.jpg" alt="Placeholder Title 2">
             </div>
         </div>
     </div>
